Update Java client docs about Pulsar BOM, Spring Boot and add Netty opts